💬 Update chat UI components (ChatContainer, Sidebar, MessageList, etc.) and backend chat/payment services integration

--- a/README
+++ b/README
@@ -18,5 +18,9 @@ docker compose up frontend
 docker compose build --no-cache user-service
 docker compose up user-service
 
+
+docker compose build --no-cache chat-service
+docker compose up chat-service
+
 docker compose build --no-cache
 docker compose up
